# ucc

./: .gitignore  CMakeLists.txt  README.md  setup
grammar/: c_parser.bnf  c_scanner.bnf  generate  preproc_exp_parser.bnf  preproc_exp_scanner.bnf  preproc_macro_id_scanner.bnf  preproc_parser.bnf  preproc_scanner.bnf
grammar/src/: CParserBuffer.cpp  CParserBuffer.h  PreprocExpParserBuffer.cpp  PreprocExpParserBuffer.h  PreprocessorMacroIdScannerBuffer.cpp  PreprocessorMacroIdScannerBuffer.h  PreprocessorParserBuffer.cpp  PreprocessorParserBuffer.h  UccAsmBuffer.cpp  UccAsmBuffer.h
include/: assert.h  math.h  stdio.h  stdlib.h  string.h
src/: ArgumentOptions.cpp  ArgumentOptions.h  UccDefs.h  main.cpp
src/compiler/: ArrayDeclarator.cpp  ArrayDeclarator.h  ArrayType.cpp  ArrayType.h  CParser.cpp  CParser.h  CParserDecl.cpp  CParserExp.cpp  CParserStmt.cpp  CScanner.cpp  CScanner.h  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  CompilerDefs.h  Declaration.cpp  Declaration.h  Declarator.cpp  Declarator.h  DeclaratorBase.cpp  DeclaratorBase.h  ExpResult.cpp  ExpResult.h  Function.cpp  Function.h  FunctionDeclarator.cpp  FunctionDeclarator.h  FunctionType.cpp  FunctionType.h  GlobalSymbolTable.cpp  GlobalSymbolTable.h  IndirectDeclarator.cpp  IndirectDeclarator.h  PointerType.cpp  PointerType.h  PrimitiveType.cpp  PrimitiveType.h  PrimitiveTypeBase.cpp  PrimitiveTypeBase.h  (+20 more)
src/preprocessor/: ComposedScannerWrapper.cpp  ComposedScannerWrapper.h  DefaultScannerWrapper.cpp  DefaultScannerWrapper.h  DefineMap.cpp  DefineMap.h  (+24 more)
test/: .gitignore
(+27 files in other folders)
